--- a/Areas/Farmer/Views/Inventory/OrderDetails.cshtml
+++ b/Areas/Farmer/Views/Inventory/OrderDetails.cshtml
@@ -3,120 +3,153 @@
 <div class="container mt-4">
     <a href="javascript:history.back()" class="btn btn-secondary mb-3"><i class="fa fa-arrow-left"></i> Back</a>
 
-    <h3 class="text-primary mb-4 text-center justify-content-center">Order Details</h3>
+    <h3 class="text-primary mb-4 text-center">Order Details</h3>
 
-    <!-- Single Card for All Information -->
-    <div class="card mb-3 border-primary shadow-sm">
-        <div class="card-body">
-            <h4 class="card-title mb-4">Order Details</h4>
+    <div class="row justify-content-center">
+        <div class="col-md-10 col-lg-8">
+            <!-- Single Card for All Information -->
+            <div class="card mb-3 border-primary shadow-sm">
+                <div class="card-body">
+                    <table class="table table-bordered">
+                        <tbody>
+                            <!-- Customer Information -->
+                            <tr>
+                                <th colspan="2">Customer Information</th>
+                            </tr>
+                            <tr>
+                                <td><strong>Name:</strong> @Model.CustomerName</td>
+                                <td><strong>Phone:</strong> @Model.CustomerPhone</td>
+                            </tr>
+                            <tr>
+                                <td colspan="2"><strong>Address:</strong> @Model.CustomerAddress</td>
+                            </tr>
+                            @if (Model.CuAddress != null)
+                            {
+                                <tr>
+                                    <td colspan="2">
+                                        <strong>Detailed Address:</strong>
+                                        <div class="d-flex flex-wrap">
+                                            <div class="mr-3"><strong>House:</strong> @Html.DisplayFor(modelItem => Model.CuAddress.House)</div>
+                                            <div class="mr-3"><strong>Street No:</strong> @Html.DisplayFor(modelItem => Model.CuAddress.StreetNo)</div>
+                                            <div class="mr-3"><strong>Ward No:</strong> @Html.DisplayFor(modelItem => Model.CuAddress.WardNo)</div>
+                                            <div class="mr-3"><strong>Thana:</strong> @Html.DisplayFor(modelItem => Model.CuAddress.Thana)</div>
+                                            <div class="mr-3"><strong>District:</strong> @Html.DisplayFor(modelItem => Model.CuAddress.District)</div>
+                                            <div><strong>Division:</strong> @Html.DisplayFor(modelItem => Model.CuAddress.Division)</div>
+                                        </div>
+                                    </td>
+                                </tr>
+                            }
+                            else
+                            {
+                                <tr>
+                                    <td colspan="2">No address available</td>
+                                </tr>
+                            }
 
-            <ul class="list-group">
-                <li class="list-group-item">
-                    <strong>Customer Information:</strong>
-                    <ul class="list-unstyled">
-                        <li><strong>Name:</strong> @Model.CustomerName</li>
-                        <li><strong>Phone:</strong> @Model.CustomerPhone</li>
-                        <li><strong>Address:</strong> @Model.CustomerAddress</li>
-                        @if (Model.CuAddress != null)
-                        {
-                            <li>
-                                <strong>Detailed Address:</strong>
-                                <div class="d-flex flex-wrap">
-                                    <div class="mr-3"><strong>House:</strong> @Html.DisplayFor(modelItem => Model.CuAddress.House)</div>
-                                    <div class="mr-3"><strong>Street No:</strong> @Html.DisplayFor(modelItem => Model.CuAddress.StreetNo)</div>
-                                    <div class="mr-3"><strong>Ward No:</strong> @Html.DisplayFor(modelItem => Model.CuAddress.WardNo)</div>
-                                    <div class="mr-3"><strong>Thana:</strong> @Html.DisplayFor(modelItem => Model.CuAddress.Thana)</div>
-                                    <div class="mr-3"><strong>District:</strong> @Html.DisplayFor(modelItem => Model.CuAddress.District)</div>
-                                    <div><strong>Division:</strong> @Html.DisplayFor(modelItem => Model.CuAddress.Division)</div>
-                                </div>
-                            </li>
-                        }
-                        else
-                        {
-                            <li>No address available</li>
-                        }
-                    </ul>
-                </li>
+                            <!-- Shop Information -->
+                            <tr>
+                                <th colspan="2">Shop Information</th>
+                            </tr>
+                            <tr>
+                                <td><strong>Shop ID:</strong> @Model.ShopId</td>
+                                <td><strong>Shop Name:</strong> @Model.ShopName</td>
+                            </tr>
+                            <tr>
+                                <td colspan="2"><strong>Shop Address:</strong></td>
+                            </tr>
+                            @if (Model.SpAddress != null)
+                            {
+                                <tr>
+                                    <td colspan="2">
+                                        <div class="d-flex flex-wrap">
+                                            <div class="mr-3"><strong>House:</strong> @Html.DisplayFor(modelItem => Model.SpAddress.House)</div>
+                                            <div class="mr-3"><strong>Street No:</strong> @Html.DisplayFor(modelItem => Model.SpAddress.StreetNo)</div>
+                                            <div class="mr-3"><strong>Ward No:</strong> @Html.DisplayFor(modelItem => Model.SpAddress.WardNo)</div>
+                                            <div class="mr-3"><strong>Thana:</strong> @Html.DisplayFor(modelItem => Model.SpAddress.Thana)</div>
+                                            <div class="mr-3"><strong>District:</strong> @Html.DisplayFor(modelItem => Model.SpAddress.District)</div>
+                                            <div><strong>Division:</strong> @Html.DisplayFor(modelItem => Model.SpAddress.Division)</div>
+                                        </div>
+                                    </td>
+                                </tr>
+                            }
+                            else
+                            {
+                                <tr>
+                                    <td colspan="2">No address available</td>
+                                </tr>
+                            }
 
-                <li class="list-group-item">
-                    <strong>Shop Information:</strong>
-                    <ul class="list-unstyled">
-                        <li><strong>Shop ID:</strong> @Model.ShopId</li>
-                        <li><strong>Shop Name:</strong> @Model.ShopName</li>
-                        <li><strong>Shop Address:</strong></li>
-                        @if (Model.SpAddress != null)
-                        {
-                         
-                            <div class="d-flex flex-wrap">
-                                <div class="mr-3"><strong>House:</strong> @Html.DisplayFor(modelItem => Model.SpAddress.House)</div>
-                                <div class="mr-3"><strong>Street No:</strong> @Html.DisplayFor(modelItem => Model.SpAddress.StreetNo)</div>
-                                <div class="mr-3"><strong>Ward No:</strong> @Html.DisplayFor(modelItem => Model.SpAddress.WardNo)</div>
-                                <div class="mr-3"><strong>Thana:</strong> @Html.DisplayFor(modelItem => Model.SpAddress.Thana)</div>
-                                <div class="mr-3"><strong>District:</strong> @Html.DisplayFor(modelItem => Model.SpAddress.District)</div>
-                                <div><strong>Division:</strong> @Html.DisplayFor(modelItem => Model.SpAddress.Division)</div>
-                            </div>
-                          
-                        }
-                        else
-                        {
-                            <li>No address available</li>
-                        }
-                    </ul>
-                </li>
+                            <!-- Rider Information -->
+                            <tr>
+                                <th colspan="2">Rider Information</th>
+                            </tr>
+                            <tr>
+                                <td><strong>Name:</strong> @Model.RiderName</td>
+                                <td><strong>Phone:</strong> @Model.RiderPhone</td>
+                            </tr>
+                            <tr>
+                                <td colspan="2"><strong>Rider Address:</strong></td>
+                            </tr>
+                            @if (Model.RpAddress != null)
+                            {
+                                <tr>
+                                    <td colspan="2">
+                                        <div class="d-flex flex-wrap">
+                                            <div class="mr-3"><strong>House:</strong> @Html.DisplayFor(modelItem => Model.RpAddress.House)</div>
+                                            <div class="mr-3"><strong>Street No:</strong> @Html.DisplayFor(modelItem => Model.RpAddress.StreetNo)</div>
+                                            <div class="mr-3"><strong>Ward No:</strong> @Html.DisplayFor(modelItem => Model.RpAddress.WardNo)</div>
+                                            <div class="mr-3"><strong>Thana:</strong> @Html.DisplayFor(modelItem => Model.RpAddress.Thana)</div>
+                                            <div class="mr-3"><strong>District:</strong> @Html.DisplayFor(modelItem => Model.RpAddress.District)</div>
+                                            <div><strong>Division:</strong> @Html.DisplayFor(modelItem => Model.RpAddress.Division)</div>
+                                        </div>
+                                    </td>
+                                </tr>
+                            }
+                            else
+                            {
+                                <tr>
+                                    <td colspan="2">No address available</td>
+                                </tr>
+                            }
 
-                <li class="list-group-item">
-                    <strong>Rider Information:</strong>
-                    <ul class="list-unstyled">
-                        <li><strong>Name:</strong> @Model.RiderName</li>
-                        <li><strong>Phone:</strong> @Model.RiderPhone</li>
-                        <li><strong>Rider Address:</strong></li>
-                        @if (Model.RpAddress != null)
-                        {
-                            <div class="d-flex flex-wrap">
-                                <div class="mr-3"><strong>House:</strong> @Html.DisplayFor(modelItem => Model.RpAddress.House)</div>
-                                <div class="mr-3"><strong>Street No:</strong> @Html.DisplayFor(modelItem => Model.RpAddress.StreetNo)</div>
-                                <div class="mr-3"><strong>Ward No:</strong> @Html.DisplayFor(modelItem => Model.RpAddress.WardNo)</div>
-                                <div class="mr-3"><strong>Thana:</strong> @Html.DisplayFor(modelItem => Model.RpAddress.Thana)</div>
-                                <div class="mr-3"><strong>District:</strong> @Html.DisplayFor(modelItem => Model.RpAddress.District)</div>
-                                <div><strong>Division:</strong> @Html.DisplayFor(modelItem => Model.RpAddress.Division)</div>
-                            </div>
-                        }
-                        else
-                        {
-                            <li>No address available</li>
-                        }
-                    </ul>
-                </li>
+                            <!-- Order Information -->
+                            <tr>
+                                <th colspan="2">Order Information</th>
+                            </tr>
+                            <tr>
+                                <td><strong>Order ID:</strong> @Model.OrderId</td>
+                                <td><strong>Order Date:</strong> @Model.OrderDate.ToString("dd/MM/yyyy HH:mm")</td>
+                            </tr>
+                            <tr>
+                                <td><strong>Order Condition:</strong> @Model.OrderCondition</td>
+                                <td><strong>Payment Methods:</strong> @Model.PaymentMethods</td>
+                            </tr>
+                            <tr>
+                                <td><strong>Payable Money:</strong> @Model.PayableMoney Tk</td>
+                                <td><strong>Delivery Charge:</strong> @Model.DelivaryCharge Tk</td>
+                            </tr>
+                            <tr>
+                                <td colspan="2"><strong>Order Accept Time:</strong> @Model.OrderAccept.ToString("dd/MM/yyyy HH:mm")</td>
+                            </tr>
 
-                <li class="list-group-item">
-                    <strong>Order Information:</strong>
-                    <ul class="list-unstyled">
-                        <li><strong>Order ID:</strong> @Model.OrderId</li>
-                        <li><strong>Order Date:</strong> @Model.OrderDate.ToString("dd/MM/yyyy HH:mm")</li>
-                        <li><strong>Order Condition:</strong> @Model.OrderCondition</li>
-                        <li><strong>Payment Methods:</strong> @Model.PaymentMethods</li>
-                        <li><strong>Payable Money:</strong> @Model.PayableMoney Tk</li>
-                        <li><strong>Delivery Charge:</strong> @Model.DelivaryCharge Tk</li>
-                        <li><strong>Order Accept Time:</strong> @Model.OrderAccept.ToString("dd/MM/yyyy HH:mm")</li>
-                    </ul>
-                </li>
-
-                <li class="list-group-item">
-                    <strong>Products:</strong>
-                    <ul class="list-group">
-                        @foreach (var product in Model.Products)
-                        {
-                            <li class="list-group-item d-flex justify-content-between align-items-center">
-                                <span>@product.ProductName - Quantity: @product.Quantity</span>
-                               Price: @product.Price Tk
-                            </li>
-                        }
-                    </ul>
-                    <div class="mt-3 text-right">
-                        <h5>Total Price: @Model.TotalPrice Tk</h5>
-                    </div>
-                </li>
-            </ul>
+                            <!-- Products Information -->
+                            <tr>
+                                <th colspan="2">Products</th>
+                            </tr>
+                            @foreach (var product in Model.Products)
+                            {
+                                <tr>
+                                    <td>@product.ProductName - Quantity: @product.Quantity</td>
+                                    <td class="text-right">Price: @product.Price Tk</td>
+                                </tr>
+                            }
+                            <tr>
+                                <td class="text-right" colspan="2"><strong>Total Price:</strong> @Model.TotalPrice Tk</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
         </div>
     </div>
 
@@ -142,17 +175,21 @@
         font-size: 1.5rem;
     }
 
-    .list-group-item {
-        border: none;
-        padding: 10px 15px;
+    .table th,
+    .table td {
+        vertical-align: middle;
     }
 
-    .d-flex {
+    .table-bordered {
+        border: 1px solid #dee2e6;
+    }
+
+    .mr-3{
+        margin-right:5px;
+    }
+
+    .row.justify-content-center {
         display: flex;
-        flex-wrap: wrap;
-    }
-
-    .mr-3 {
-        margin-right: 1rem;
+        justify-content: center;
     }
 </style>
