--- a/Areas/Rider/Views/Rider/CreateRider.cshtml
+++ b/Areas/Rider/Views/Rider/CreateRider.cshtml
@@ -1,134 +1,114 @@
 ﻿@model OrganicOption.Models.Rider_Section.RiderModel
 
-<h3 class="text-info">Create Rider Profile</h3>
-
-<div class="row">
-    <div class="col-lg-3"></div>
-    <div class="col-lg-6">
-        <form asp-action="CreateRider" method="post" enctype="multipart/form-data">
-
-            <div class="p-4 rounded border">
-                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-
-                <div class="form-group row">
-                    <div class="col-lg-2">
-                        <label asp-for="Name"></label>
-                    </div>
-                    <div class="col-lg-5">
-                        <input asp-for="Name" class="form-control" />
-                        <span asp-validation-for="Name" class="text-danger"></span>
-                    </div>
-                </div>
-
-                <div class="form-group row">
-                    <div class="col-lg-2">
-                        <label asp-for="Age"></label>
-                    </div>
-                    <div class="col-lg-5">
-                        <input asp-for="Age" class="form-control" />
-                        <span asp-validation-for="Age" class="text-danger"></span>
-                    </div>
-                </div>
-
-                <div class="form-group row">
-                    <div class="col-lg-2">
-                        <label asp-for="DrivingLicense"></label>
-                    </div>
-                    <div class="col-lg-5">
-                        <input asp-for="DrivingLicense" class="form-control" />
-                        <span asp-validation-for="DrivingLicense" class="text-danger"></span>
-                    </div>
-                </div>
-
-                <div class="form-group row">
-                    <div class="col-lg-2">
-                        <label asp-for="NID"></label>
-                    </div>
-                    <div class="col-lg-5">
-                        <input asp-for="NID" class="form-control" />
-                        <span asp-validation-for="NID" class="text-danger"></span>
-                    </div>
-                </div>
-
-                <div class="form-group row">
-                    <div class="col-lg-2">
-                        <label asp-for="PhoneNumber"></label>
-                    </div>
-                    <div class="col-lg-5">
-                        <input asp-for="PhoneNumber" class="form-control" />
-                        <span asp-validation-for="PhoneNumber" class="text-danger"></span>
-                    </div>
-                </div>
-
-
-                <div class="form-group">
-                    <label>Address</label>
-                    <input type="text" asp-for="RiderAddress.Division" placeholder="Division" class="form-control" />
-                    <input type="text" asp-for="RiderAddress.District" placeholder="District" class="form-control" />
-                    <input type="text" asp-for="RiderAddress.Thana" placeholder="Thana" class="form-control" />
-                    <input type="text" asp-for="RiderAddress.WardNo" placeholder="Ward No" class="form-control" />
-                    <input type="text" asp-for="RiderAddress.StreetNo" placeholder="Street No" class="form-control" />
-                    <input type="text" asp-for="RiderAddress.House" placeholder="House" class="form-control" />
-                    <span asp-validation-for="RiderAddress.Division" class="text-danger"></span>
-                    <span asp-validation-for="RiderAddress.District" class="text-danger"></span>
-                    <span asp-validation-for="RiderAddress.Thana" class="text-danger"></span>
-                    <span asp-validation-for="RiderAddress.WardNo" class="text-danger"></span>
-                    <span asp-validation-for="RiderAddress.StreetNo" class="text-danger"></span>
-                    <span asp-validation-for="RiderAddress.House" class="text-danger"></span>
-                </div>
-@* 
-                <div class="form-group row">
-                    <div class="col-lg-2">
-                        <label asp-for="VehicleType"></label>
-                    </div>
-                    <div class="col-lg-5">
-                        <select asp-for="VehicleType" class="form-control">
-                            <option value="">Select Vehicle Type</option>
-                            @foreach (var item in Enum.GetValues(typeof(OrganicOption.Models.Rider_Section.VehicleType)))
-                            {
-                                <option value="@item">@item</option>
-                            }
-                        </select>
-                        <span asp-validation-for="VehicleType" class="text-danger"></span>
-                    </div>
-                </div>
-
-                <div class="form-group row">
-                    <div class="col-lg-2">
-                        <label asp-for="BagType"></label>
-                    </div>
-                    <div class="col-lg-5">
-                        <select asp-for="BagType" class="form-control">
-                            <option value="">Select Bag Type</option>
-                            @foreach (var item in Enum.GetValues(typeof(OrganicOption.Models.Rider_Section.BagType)))
-                            {
-                                <option value="@item">@item</option>
-                            }
-                        </select>
-                        <span asp-validation-for="BagType" class="text-danger"></span>
-                    </div>
-                </div>
-
-                <div class="form-group row">
-                    <div class="col-lg-2">
-                        <label asp-for="RiderStatus"></label>
-                    </div>
-                    <div class="col-lg-5">
-                        <input type="checkbox" asp-for="RiderStatus" />
-                    </div>
-                </div> *@
-
-                <input type="hidden" asp-for="RiderUserId" value="@User.Identity.Name" />
-
-                <div class="form-group">
-                    <input type="submit" class="btn btn-primary" value="Save" />
-                </div>
-
-            </div>
-            <div class="col-lg-2"></div>
-        </form>
+<div class="d-flex">
+    <!-- Sidebar -->
+    <div class="sidebar bg-dark p-3">
+        <ul class="nav flex-column">
+            <li class="nav-item">
+                <a class="nav-link text-light" href="#">
+                    <i class="fas fa-home"></i> Dashboard
+                </a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link text-light" href="#">
+                    <i class="fas fa-list"></i> My Orders
+                </a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link text-light" href="#">
+                    <i class="fas fa-chart-bar"></i> Performance
+                </a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link text-light" href="#">
+                    <i class="fas fa-wallet"></i> Wallet
+                </a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link text-light" href="#">
+                    <i class="fas fa-cog"></i> Settings
+                </a>
+            </li>
+        </ul>
     </div>
-    <div class="col-lg-3"></div>
+
+    <!-- Main Content -->
+    <div class="container-fluid main-content">
+        <div class="row justify-content-center">
+            <div class="card col-lg-6 col-md-8 col-sm-10" >
+           
+            <form asp-action="CreateRider" method="post" enctype="multipart/form-data" style="margin:20px;padding:20px;">
+                    <h3 class="text-info text-center  mb-2">Create Rider Profile</h3>
+                    <hr />
+                    <div>
+                        <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+
+                        <div class="form-group row">
+                            <label asp-for="Name" class="col-lg-4 col-form-label text-lg-right"></label>
+                            <div class="col-lg-8">
+                                <input asp-for="Name" class="form-control" />
+                                <span asp-validation-for="Name" class="text-danger"></span>
+                            </div>
+                        </div>
+
+                        <div class="form-group row">
+                            <label asp-for="Age" class="col-lg-4 col-form-label text-lg-right"></label>
+                            <div class="col-lg-8">
+                                <input asp-for="Age" class="form-control" />
+                                <span asp-validation-for="Age" class="text-danger"></span>
+                            </div>
+                        </div>
+
+                        <div class="form-group row">
+                            <label asp-for="DrivingLicense" class="col-lg-4 col-form-label text-lg-right"></label>
+                            <div class="col-lg-8">
+                                <input asp-for="DrivingLicense" class="form-control" />
+                                <span asp-validation-for="DrivingLicense" class="text-danger"></span>
+                            </div>
+                        </div>
+
+                        <div class="form-group row">
+                            <label asp-for="NID" class="col-lg-4 col-form-label text-lg-right"></label>
+                            <div class="col-lg-8">
+                                <input asp-for="NID" class="form-control" />
+                                <span asp-validation-for="NID" class="text-danger"></span>
+                            </div>
+                        </div>
+
+                        <div class="form-group row">
+                            <label asp-for="PhoneNumber" class="col-lg-4 col-form-label text-lg-right"></label>
+                            <div class="col-lg-8">
+                                <input asp-for="PhoneNumber" class="form-control" />
+                                <span asp-validation-for="PhoneNumber" class="text-danger"></span>
+                            </div>
+                        </div>
+
+                        <div class="form-group">
+                            <label style="margin:2px">Address</label>
+                            <input type="text" asp-for="RiderAddress.Division" placeholder="Division" class="form-control mb-2" />
+                            <input type="text" asp-for="RiderAddress.District" placeholder="District" class="form-control mb-2" />
+                            <input type="text" asp-for="RiderAddress.Thana" placeholder="Thana" class="form-control mb-2" />
+                            <input type="text" asp-for="RiderAddress.WardNo" placeholder="Ward No" class="form-control mb-2" />
+                            <input type="text" asp-for="RiderAddress.StreetNo" placeholder="Street No" class="form-control mb-2" />
+                            <input type="text" asp-for="RiderAddress.House" placeholder="House" class="form-control mb-2" />
+                            <span asp-validation-for="RiderAddress.Division" class="text-danger"></span>
+                            <span asp-validation-for="RiderAddress.District" class="text-danger"></span>
+                            <span asp-validation-for="RiderAddress.Thana" class="text-danger"></span>
+                            <span asp-validation-for="RiderAddress.WardNo" class="text-danger"></span>
+                            <span asp-validation-for="RiderAddress.StreetNo" class="text-danger"></span>
+                            <span asp-validation-for="RiderAddress.House" class="text-danger"></span>
+                        </div>
+
+                        <input type="hidden" asp-for="RiderUserId" value="@User.Identity.Name" />
+
+                        <div class="form-group text-center">
+                            <input type="submit" class="btn btn-primary" value="Save" />
+                        </div>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
 </div>
 
 @section Scripts {
@@ -136,3 +116,66 @@
         await Html.RenderPartialAsync("_ValidationScriptsPartial");
     }
 }
+
+<style>
+    /* Sidebar */
+    .sidebar {
+        height: 100vh;
+        position: fixed;
+        top: 57px;
+        left: 0;
+        width: 200px;
+        background-color: #343a40; 
+    }
+
+    .card{
+        box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2);
+        transform: translateY(-1px);
+        transition: all 0.2s ease;
+      
+    }
+
+        .sidebar ul {
+            list-style-type: none;
+            padding: 0;
+        }
+
+            .sidebar ul li {
+                margin: 15px 0;
+            }
+
+                .sidebar ul li a {
+                    color: #ffffff; /* White text color */
+                    text-decoration: none;
+                    display: flex;
+                    align-items: center;
+                }
+
+                    .sidebar ul li a i {
+                        margin-right: 10px;
+                    }
+
+
+    .main-content {
+        margin-left: 200px; /* Offset the sidebar width */
+        padding: 10px;
+    }
+
+        .main-content .row {
+            margin-top: 7px; 
+        }
+
+  
+
+    .form-group label {
+        font-weight: bold;
+    }
+
+    .form-control {
+        margin-bottom: 5px;
+    }
+
+    .btn-primary {
+        width: 100%; 
+    }
+</style>
