--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -168,6 +168,16 @@
                                                             <li><a href="404.html">Error 404</a></li>
                                                         </ul>
                                                     </li>
+                                                    <li>
+                                                        <a href="#">other Pages</a>
+                                                        <ul>
+                                                            <li><a href="cart.html">cart</a></li>
+                                                            <li><a href="wishlist.html">Wishlist</a></li>
+                                                            <li><a href="checkout.html">Checkout</a></li>
+                                                            <li><a href="my-account.html">my account</a></li>
+                                                            <li><a href="404.html">Error 404</a></li>
+                                                        </ul>
+                                                    </li>
                                                    
                                                 </ul>
                                             </div>
@@ -193,6 +203,16 @@
                                                     </li>
                                                     <li>
                                                         <a asp-area="Farmer" asp-controller="FarmerShop" asp-action="AllShop">All Shop</a>
+                                                        <ul>
+                                                            <li><a href="cart.html">cart</a></li>
+                                                            <li><a href="wishlist.html">Wishlist</a></li>
+                                                            <li><a href="checkout.html">Checkout</a></li>
+                                                            <li><a href="my-account.html">my account</a></li>
+                                                            <li><a href="404.html">Error 404</a></li>
+                                                        </ul>
+                                                    </li>
+                                                    <li>
+                                                        <a href="#">other Pages</a>
                                                         <ul>
                                                             <li><a href="cart.html">cart</a></li>
                                                             <li><a href="wishlist.html">Wishlist</a></li>
