Resolve Javascript link

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -833,7 +833,7 @@
     <script src="/js/jsplugins.js"></script>
 
     <!-- Main JS -->
-    <script src="/js/main.js"></script>
+    <script src="/js/jsmain.js"></script>
 
    @*  <script src="~/js/plugins.js"></script>
     <script src="~/js/main.js"></script> *@
