Rider Offer Modification for Address correction

--- a/Areas/Rider/Views/RiderOffer/CreateDeliveryForAcceptedOrder.cshtml
+++ b/Areas/Rider/Views/RiderOffer/CreateDeliveryForAcceptedOrder.cshtml
@@ -62,7 +62,7 @@
                     <h4>Farmer Shop Details</h4>
                     <p>Shop Name: @Model.ShopName</p>
                     <p>Shop Contract: @Model.ShopContract</p>
-                    <p>Shop Address: @Model.ShopAddress</p>
+                   @*  <p>Shop Address: @Model.ShopAddress</p> *@
                     <h4>Shop Address:</h4>
 
                     @if (ViewBag.ShopAddress != null)
